<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Login and SignUp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>

</resources>    <string name="app_name">LELO.COM</string>
=======
    <string name="app_name">LELO.COM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer"></string>
    <string name="close_drawer"></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LELO.COM</string>
    <string name="nav_header_subtitle">You\'ll find it here!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="item_1">Electronics</string>
    <string name="item_2">Mobile \u0026 Tablets</string>
    <string name="item_3">Fashion</string>
    <string name="item_4">Home \u0026 Furniture</string>
    <string name="item_5">Beauty,Books \u0026 Products</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_notifications">Notifications</string>

    <string name="my_profile">My Profile</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>

    <string name="help_support">Help \u0026 Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="help_center">Help Center</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="shop_now">Shop Now</string>
    <string name="cart">Cart</string>
    <string name="button">Button</string>
    <string name="web_site">Web Site</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="check">Check</string>
    <string name="icon">icon</string>

</resources>
